Complete elimination of raw types and unchecked operation warnings in TableFactory
Co-authored-by: natechadwick <1232206+natechadwick@users.noreply.github.com>